--- a/src/main/resources/assets/css/login.css
+++ b/src/main/resources/assets/css/login.css
@@ -89,3 +89,10 @@ body {
   font-size: 12px;
   color: #777;
 }
+
+#flash-message {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    z-index: 900;
+}
